Changelog for minitage.core
===============================


2.0.50 (unreleased)
-------------------

- Better offline bootstrap assumptions


2.0.49 (2013-03-28)
-------------------

- offline mode, enhanced


2.0.48 (2013-03-25)
-------------------

- Better minitagify template (travis, qa)


2.0.47 (2013-03-23)
-------------------

- Better minitagify script


2.0.46 (2013-03-16)
-------------------

- try to detect buildout infra < 1 & run a buildout1 boostrap in case


2.0.45 (2013-02-13)
-------------------

- buildout 2.0 second round


2.0.44 (2013-02-13)
-------------------

- buildout 2.0 first pass


2.0.43 (2012-09-12)
-------------------

- better update support


2.0.42 (2012-09-12)
-------------------

- trigger pil rebuild


2.0.41 (2012-09-11)
-------------------

- Fix pil version


2.0.40 (2012-08-28)
-------------------

- Fix minitage base buildouts


2.0.39 (2012-08-28)
-------------------

- doc


2.0.37 (2012-08-28)
-------------------

- doc


2.0.36 (2012-08-28)
-------------------

- Fix minitage base buildouts


2.0.35 (2012-08-28)
-------------------

- fix category minibuild in minitagify


2.0.34 (2012-08-28)
-------------------

- Added the minitagify command see: `this doc <http://www.minitage.org/usecases/maintain_project.html#minitagify-an-existing-project>`_


2.0.33 (2012-05-09)
-------------------

- revert Download helper subdir patch and handle it in buildout recipes



2.0.32 (2012-05-06)
-------------------

- Fix all tests
- Dowload helper now downloads in downloadcache/netloc+urlpath/filename


2.0.31 (2012-03-26)
-------------------

- py27 deepcopy bugfix


2.0.30 (2012-03-24)
-------------------

- support py27
- Force run buildout in upgrade mode for dependencies and eggs packages


2.0.29 (2012-03-05)
-------------------

- handle pil migration


2.0.28 (2012-01-23)
-------------------

- Support for in place git branches [kiorky]

2.0.27 (2011-02-25)
-------------------
- proper release


2.0.24